--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.fade-image {
+    transition: opacity 2.5s ease-in-out;
+    opacity: 1;
+  }
+  
+  .fade-image.fade-out {
+    opacity: 0;
+  }
