--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,34 @@
 @tailwind utilities;
 
 
-.fade-image {
+/* .fade-image {
     transition: opacity 2.5s ease-in-out;
     opacity: 1;
   }
   
   .fade-image.fade-out {
     opacity: 0;
-  }
+  } */
 
+
+  /* .fade-image {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .fade-image.loaded {
+    opacity: 1;
+  } */
+
+  /* .image-container {
+    position: relative;
+  }
+  
+  .fade-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: opacity 0.5s ease-in-out;
+    width: 100%;
+    height: auto;
+  } */
