--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,68 @@
     width: 100%;
     height: auto;
   } */
+
+  /* Define initial styling */
+/* Define initial styling */
+path {
+  stroke-width: 0;
+  stroke-opacity: 0.5;
+  fill-opacity: 0;
+  fill: rgba(255,255,0,0.7); /* Here, the fill color is set to red */
+  transition: stroke-opacity 0.5s ease-out, fill-opacity 2.5s ease-out;
+}
+
+/* Add animation to increase strokeWidth and fill */
+.animate-growStroke {
+  animation: 
+    /* growStroke 0.1s forwards,  */
+    /* fadeOutStroke 0.5s 0.2s forwards,  */
+    growFill 2s 0.2s forwards, 
+    fadeOutFill 1s 0.4s forwards;
+}
+
+/* Keyframes for increasing strokeWidth */
+@keyframes growStroke {
+  0% {
+    stroke-width: 0;
+  }
+  100% {
+    stroke-width: .5;
+  }
+}
+
+/* Keyframes for fading out stroke */
+@keyframes fadeOutStroke {
+  0% {
+    stroke-opacity: .5;
+  }
+  100% {
+    stroke-opacity: 0;
+  }
+}
+
+/* Keyframes for increasing fill opacity */
+@keyframes growFill {
+  0% {
+    fill-opacity: 0;
+  }
+  40% {
+    fill-opacity: 1;
+  }
+  80% {
+    fill-opacity: 0.5;
+  }
+  100% {
+    fill-opacity: 1;
+  }
+}
+
+/* Keyframes for fading out fill */
+@keyframes fadeOutFill {
+  0% {
+    fill-opacity: 1;
+  }
+  100% {
+    fill-opacity: 0.0;
+  }
+}
