--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,8 @@ path {
 .category-div:has(> h4 + :empty) {
   display: none;
 }
+
+.fullSizeProd {
+  width: 100% !important;
+  height: 100% !important;
+}
